--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/salismt/todo2copy#readme",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "gulp": "^3.9.0",
     "mongoose": "^4.1.9",
     "passport": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3"
   }
 }
